Fixed #616
The buttons were too large and adding extra space to the window

--- a/leaf-ui/css/analysis_html.css
+++ b/leaf-ui/css/analysis_html.css
@@ -328,7 +328,7 @@ select > .select-placeholder {
   position: relative;
   vertical-align: top;
   width: 200px;
-  height: 40px;
+  height: 32px;
   padding: 0;
   color: black;
   text-align: center;
